--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     </div>
       <div class="abajo">
         <div id="imagen2">
-          <img src="imagenes/imagen2.jpg" width="400" />
+          <img src="imagen2.jpg" width="400" />
           <div>Paisajes</div>
         </div>
         <div id="imagen3">
-          <img src="imagenes/imagen3.jpg" width="400" />
+          <img src="imagen3.jpg" width="400" />
           <div>Retratos</div>
         </div>
       </div>
