--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" href="css/estilos.css"   media="all"   />
+    <link rel="stylesheet" href="estilos.css"   media="all"   />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -27,7 +27,7 @@
     <div class="contenido.">
       <div class="central">
         <div id="imagen11" width="600">
-          <img src="imagenes/imagen1.jpg" width="600" />
+          <img src="imagen1.jpg" width="600" />
         </div>
       </div>
     </div>
