--- a/paisajes.html
+++ b/paisajes.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" href="css/estilos.css" />
+    <link rel="stylesheet" href="estilos.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -27,22 +27,22 @@
 <body>
     <div class="contenido" width="900">
         <div id="imagen1" width="250" height="200" >
-            <img src="imagenes/imagen1.jpg" width="250px" height="200" />
+            <img src="imagen1.jpg" width="250px" height="200" />
           </div>
           <div id="imagen22" width="250px" height="200" >
-            <img src="imagenes/imagen4.jpg"width="250px"  height="200" />
+            <img src="imagen4.jpg"width="250px"  height="200" />
           </div>
           <div id="imagen33"  width="250px" height="200">
-            <img src="imagenes/imagen3.jpg" width="250px" height="200" />
+            <img src="imagen3.jpg" width="250px" height="200" />
           </div>
           <div id="imagen4" width="250px" height="200" >
-            <img src="imagenes/imagen2.jpg" width="250px" height="200" />
+            <img src="imagen2.jpg" width="250px" height="200" />
           </div>
           <div id="imagen5" >
-            <img src="imagenes/imagen4.jpg" width="250px" height="200" />
+            <img src="imagen4.jpg" width="250px" height="200" />
           </div>
           <div id="imagen6"  width="250px" height="200">
-            <img src="imagenes/imagen1.jpg"width="250px"  height="200"  />
+            <img src="imagen1.jpg"width="250px"  height="200"  />
           </div>
     </div>
     <footer>
