--- a/retratos.html
+++ b/retratos.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" href="css/estilos.css" />
+    <link rel="stylesheet" href="estilos.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -28,22 +28,22 @@
 <body>
   <div class="contenido" width="900">
     <div id="imagen1" width="250" height="200" >
-        <img src="imagenes/imagen5.JPG" width="250px" height="200" />
+        <img src="imagen5.JPG" width="250px" height="200" />
       </div>
       <div id="imagen22" width="250px" height="200" >
-        <img src="imagenes/imagen5.jpg"width="250px"  height="200" />
+        <img src="imagen5.jpg"width="250px"  height="200" />
       </div>
       <div id="imagen33"  width="250px" height="200">
-        <img src="imagenes/imagen5.jpg" width="250px" height="200" />
+        <img src="imagen5.jpg" width="250px" height="200" />
       </div>
       <div id="imagen4" width="250px" height="200" >
-        <img src="imagenes/imagen5.jpg" width="250px" height="200" />
+        <img src="imagen5.jpg" width="250px" height="200" />
       </div>
       <div id="imagen5" >
-        <img src="imagenes/imagen5.jpg" width="250px" height="200" />
+        <img src="imagen5.jpg" width="250px" height="200" />
       </div>
       <div id="imagen6"  width="250px" height="200">
-        <img src="imagenes/imagen5.jpg"width="250px"  height="200"  />
+        <img src="imagen5.jpg"width="250px"  height="200"  />
       </div>
 </div>
 
