--- a/retratos.html
+++ b/retratos.html
@@ -31,19 +31,19 @@
         <img src="imagen5.JPG" width="250px" height="200" />
       </div>
       <div id="imagen22" width="250px" height="200" >
-        <img src="imagen5.jpg"width="250px"  height="200" />
+        <img src="imagen5.JPG"width="250px"  height="200" />
       </div>
       <div id="imagen33"  width="250px" height="200">
-        <img src="imagen5.jpg" width="250px" height="200" />
+        <img src="imagen5.JPG" width="250px" height="200" />
       </div>
       <div id="imagen4" width="250px" height="200" >
-        <img src="imagen5.jpg" width="250px" height="200" />
+        <img src="imagen5.JPG" width="250px" height="200" />
       </div>
       <div id="imagen5" >
-        <img src="imagen5.jpg" width="250px" height="200" />
+        <img src="imagen5.JPG" width="250px" height="200" />
       </div>
       <div id="imagen6"  width="250px" height="200">
-        <img src="imagen5.jpg"width="250px"  height="200"  />
+        <img src="imagen5.JPG"width="250px"  height="200"  />
       </div>
 </div>
 
